more styling to the front page

--- a/index.html
+++ b/index.html
@@ -15,16 +15,23 @@
     
 </head>      
 <body>
-<h1> terve terve terva perse, tervetuloa puolen metrin metsään missä hasis leijui ilmassa, siellä tapat kaikki vanhat tussut ja hassus karhun nimeltä anal rasvakeitin</h1>
+<header> terve terve terva perse, tervetuloa puolen metrin metsään missä hasis leijui ilmassa, siellä tapat kaikki vanhat tussut ja hassus karhun nimeltä anal rasvakeitin</header>
 <br>
-<button1>-------</button1>
-<button2>-------</button2>
-<button3>-------</button3>
+<button1>nappi</button1>
+<button2>vittu</button2>
+<button3>paskaa</button3>
 <br>
 <br>
+<article>
+    <h1>pieni esittely lienee hyväksi</h1>
+    <p>asdasdasdasdas</p>
+</article>
 <br>
 <h1> kukka kakku kakka kuka aku</h1>
-
+<br>
+<br>
+<br>
+<h1>jhgjh</h1>
 <br>
 <br>
 <br>
@@ -39,9 +46,7 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
+<article>awdawdawd</article>
 <br>
 <br>
 <br>
