added padding to page
jeejee kaunis sivu jeejee

--- a/index.html
+++ b/index.html
@@ -1,52 +1,61 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <style>
-        body {
-          background-image: url('assets/space.jpg');
-          background-repeat: no-repeat;
-          background-attachment: fixed;  
-          background-size: cover;
-        }
-        </style>
     <meta charset = "UTF-8">
-    <title>Webpage</title>
-    <link href="styles.css" rel="stylesheet">
-    
-</head>      
+    <title>Lauri Tuovinen</title>
+    <link href="styles.css" rel="stylesheet">      
+
+
 <body>
 <header> terve terve terva perse, tervetuloa puolen metrin metsään missä hasis leijui ilmassa, siellä tapat kaikki vanhat tussut ja hassus karhun nimeltä anal rasvakeitin</header>
 <br>
-<button1>nappi</button1>
-<button2>vittu</button2>
-<button3>paskaa</button3>
+<div class="containerUp">  
+    <button1>kuva kallerija </button1>  
+    <button2>ota yhteyttä</button2>
+    <button3>turhaa paskaa</button3>
+</div>  
+<br>
+<div class = "containerLeft">
+</div>
+
+<div class = "containerRight">
+</div>
+
+<h1> kakku kukka kakka kuka aku</h1>
+<article>
+    <h1>pieni esittely lienee hyväksi</h1>
+        <p>lorem ipsum</p>
+</article>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <article>
-    <h1>pieni esittely lienee hyväksi</h1>
-    <p>asdasdasdasdas</p>
-</article>
-<br>
-<h1> kukka kakku kakka kuka aku</h1>
-<br>
-<br>
-<br>
-<h1>jhgjh</h1>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<article>awdawdawd</article>
+    <h1>täällä kans</h1>
+    
+    awdawdawd</article>
 <br>
 <br>
 <br>
