added new pages
woot woot

--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
 
 
 <body>
-<header> terve terve terva perse, tervetuloa puolen metrin metsään missä hasis leijui ilmassa, siellä tapat kaikki vanhat tussut ja hassus karhun nimeltä anal rasvakeitin</header>
-<br>
-<div class="containerUp">  
-    <button1>kuva kallerija </button1>  
-    <button2>ota yhteyttä</button2>
-    <button3>turhaa paskaa</button3>
-</div>  
-<br>
 <div class = "containerLeft">
 </div>
-
 <div class = "containerRight">
 </div>
+
+<header> terve terve terva perse, tervetuloa puolen metrin metsään missä hasis leijui ilmassa, siellä tapat kaikki vanhat tussut ja hassus karhun nimeltä anal rasvakeitin erite rastas lelelelölölölölölö</header>
+<br>
+<div class="containerUp">  
+    <button1 onclick = "window.location.href ='./imgGallery.html'"> kuva kallerija </button1>  
+    <button2 onclick = "window.location.href ='./contact.html'">ota yhteyttä</button2>
+    <button3 onclick = "window.location.href ='link here'">turhaa paskaa</button3>
+</div>  
+<br>
+
 
 <h1> kakku kukka kakka kuka aku</h1>
 <article>
@@ -54,8 +55,8 @@
 <br>
 <article>
     <h1>täällä kans</h1>
-    
-    awdawdawd</article>
+    Lorem ipsum
+</article>
 <br>
 <br>
 <br>
