styled other pages

--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,27 @@
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">      
 <body>
+
     <div class = "containerLeft">
     </div>
     <div class = "containerRight">
     </div>
+<header> sutsi satsi satsaa sutsi satsaa</header>
+<br>    
+<div class="containerUp">  
+        <button1 onclick = "window.location.href ='./imgGallery.html'"> kuva kallerija </button1>  
+        <button2 onclick = "window.location.href ='./contact.html'">ota yhteyttä</button2>
+        <button3 onclick = "window.location.href ='link here'">turhaa paskaa</button3>
+</div>  
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<article>
+    suksi natsi saksaan suksisaksaan
+</article>
 
-
-    
 </body>
 </html>
