--- a/imgGallery.html
+++ b/imgGallery.html
@@ -4,11 +4,18 @@
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">      
 <body>
+   
     <div class = "containerLeft">
     </div>
     <div class = "containerRight">
     </div>
-
+    <header>vitun ylänneen jätkät</header>
+    <br>
+  <div class="containerUp">  
+        <button1 onclick = "window.location.href ='./imgGallery.html'"> kuva kallerija </button1>  
+        <button2 onclick = "window.location.href ='./contact.html'">ota yhteyttä</button2>
+        <button3 onclick = "window.location.href ='link here'">turhaa paskaa</button3>
+    </div> 
 
 
 
