added home button

--- a/imgGallery.html
+++ b/imgGallery.html
@@ -14,7 +14,7 @@
   <div class="containerUp">  
         <button1 onclick = "window.location.href ='./imgGallery.html'"> kuva kallerija </button1>  
         <button2 onclick = "window.location.href ='./contact.html'">ota yhteyttä</button2>
-        <button3 onclick = "window.location.href ='link here'">turhaa paskaa</button3>
+        <frontpageButton onclick = "window.location.href ='./index.html'">Front page</frontpageButton>
     </div> 
 
 
