made text more "suitable"
ehe

--- a/contact.html
+++ b/contact.html
@@ -9,22 +9,27 @@
     </div>
     <div class = "containerRight">
     </div>
-<header> sutsi satsi satsaa sutsi satsaa</header>
+<header> CONTACT</header>
 <br>    
 <div class="containerUp">  
-        <button1 onclick = "window.location.href ='./imgGallery.html'"> kuva kallerija </button1>  
-        <button2 onclick = "window.location.href ='./contact.html'">ota yhteyttä</button2>
+        <button1 onclick = "window.location.href ='./imgGallery.html'"> image gallery </button1>  
+        <button2 onclick = "window.location.href ='./contact.html'">contact</button2>
         <frontpageButton onclick = "window.location.href ='./index.html'">Frontpage</frontpageButton>
 </div>  
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
 <article>
-    suksi natsi saksaan suksi saksaan
+    github
+    <br>
+    linkedin
+    <br>
+    gmail
+    <br>
+    instagram
+    <br>
+    onlyfans
+    <br>
 </article>
-
 </body>
 </html>
