--- a/imgGallery.html
+++ b/imgGallery.html
@@ -9,11 +9,11 @@
     </div>
     <div class = "containerRight">
     </div>
-    <header>vitun ylänneen jätkät</header>
+    <header>IMAGE GALLERY</header>
     <br>
   <div class="containerUp">  
-        <button1 onclick = "window.location.href ='./imgGallery.html'"> kuva kallerija </button1>  
-        <button2 onclick = "window.location.href ='./contact.html'">ota yhteyttä</button2>
+        <button1 onclick = "window.location.href ='./imgGallery.html'"> image gallery </button1>  
+        <button2 onclick = "window.location.href ='./contact.html'">contact</button2>
         <frontpageButton onclick = "window.location.href ='./index.html'">Frontpage</frontpageButton>
     </div> 
 
