--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <meta charset = "UTF-8">
     <title>Lauri Tuovinen</title>
-    <link href="styles.css" rel="stylesheet">      
+    <link href="styles.css" rel="stylesheet">    
 
 <body>
 <div class = "containerLeft">
@@ -10,16 +10,16 @@
 <div class = "containerRight">
 </div>
 
-<header> terve terve terva perse, tervetuloa puolen metrin metsään missä hasis leijui ilmassa, siellä tapat kaikki vanhat tussut ja hassus karhun nimeltä anal rasvakeitin erite rastas lelelelölölölölölö</header>
+<header> Welcome </header>
 <br>
 <div class="containerUp">  
-    <button1 onclick = "window.location.href ='./imgGallery.html'"> kuva kallerija </button1>  
-    <button2 onclick = "window.location.href ='./contact.html'">ota yhteyttä</button2>
-    <button3 onclick = "window.location.href ='link here'">turhaa paskaa</button3>
+    <button1 onclick = "window.location.href ='./imgGallery.html'"> image gallery </button1>
+    <button2 onclick = "window.location.href ='./contact.html'"> contact </button2>
+    <button3 onclick = "window.location.href ='link here'"> jottain </button3>
 </div>  
 <br>
 
-<h1> kakku kukka kakka kuka aku</h1>
+<h1> ------- </h1>
 <article>
     <h1>pieni esittely lienee hyväksi</h1>
         <p>lorem ipsum</p>
@@ -34,25 +34,8 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <article>
-    <h1>täällä kans</h1>
+    <h1> täällä kans </h1>
     Lorem ipsum
 </article>
 <br>
