updated contact page
;)

--- a/contact.html
+++ b/contact.html
@@ -20,16 +20,11 @@
 <br>
 <br>
 <article>
-    github
-    <br>
-    linkedin
-    <br>
-    gmail
-    <br>
-    instagram
-    <br>
-    onlyfans
-    <br>
+    <p><a href="https://github.com/LauriTuovinen">github</a></p>
+    <p><a href="https://www.linkedin.com/in/lauri-tuovinen-81229a257/"> linkedin</a></p>
+    <p><a>gmail: lare.tuovinen@gmail.com</a></p>
+    <p><a href="https://www.instagram.com/lauri_tuovinen_/"> instagram </a></p>
+    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> onlyfans</a></p>
 </article>
 </body>
 </html>
