--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <div class="containerUp">  
     <button1 onclick = "window.location.href ='./imgGallery.html'"> image gallery </button1>
     <button2 onclick = "window.location.href ='./contact.html'"> contact </button2>
-    <button3 onclick = "window.location.href ='link here'"> jottain </button3>
+    <button3 onclick = "window.location.href ='link here'"> eimtn </button3>
 </div>  
 <br>
 
-<h1> ------- </h1>
+<h1> Who am I? </h1>
 <article>
     <h1>pieni esittely lienee hyväksi</h1>
         <p>lorem ipsum</p>
@@ -46,6 +46,6 @@
 <br>
 <br>
 <br>
-
+<script src = "assets/scripts/code.js"></script>
 </body>
 </html>
