--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">    
 <body>
-<div class = "containerLeft">
-</div>
-<div class = "containerRight">
-</div>
+<div class = "containerLeft"></div>
+<div class = "containerRight"></div>
 <header> Welcome </header>
 <br>
 <br>
