added dark/light buttons

--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,15 @@
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">      
 <body>
-
     <div class = "containerLeft">
     </div>
     <div class = "containerRight">
     </div>
-<header> CONTACT </header>
+<header> 
+    <darkButton onclick=""> dark theme </darkButton>
+    CONTACT
+    <lightButton onclick=""> light theme </lightButton>
+</header>
 <br>    
 <br>
 <div class="containerUp">  
