--- a/imgGallery.html
+++ b/imgGallery.html
@@ -9,7 +9,12 @@
     </div>
     <div class = "containerRight">
     </div>
-    <header> IMAGE GALLERY </header>
+    <header>     
+        <darkButton onclick=""> dark theme </darkButton>
+        IMAGE GALLERY
+        <lightButton onclick=""> light theme </lightButton>
+
+    </header>
     <br>
     <br>
   <div class="containerUp">  
