--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
 <body>
 <div class = "containerLeft"></div>
 <div class = "containerRight"></div>
-<header> Welcome </header>
+<header>  
+    <darkButton onclick=""> dark theme </darkButton>
+    Welcome
+    <lightButton onclick=""> light theme </lightButton>
+</header>
 <br>
 <br>
 <div class="containerUp">  
     <button1 onclick = "window.location.href ='./imgGallery.html'"> image gallery </button1>
     <button2 onclick = "window.location.href ='./contact.html'"> contact </button2>
     <button3 onclick = "window.location.href ='link here'"> eimtn </button3>
-</div>  
+</div>
 <br>
 
 <h1> Who am I? </h1>
@@ -35,14 +39,6 @@
     <h1> täällä kans </h1>
     Lorem ipsum
 </article>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <script src = "assets/scripts/code.js"></script>
 </body>
 </html>
