started working on light/darkmode

--- a/contact.html
+++ b/contact.html
@@ -3,32 +3,31 @@
     <meta charset = "UTF-8">
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">      
-<body>
+<body class="bodyDark">
     <div class = "containerLeft">
     </div>
     <div class = "containerRight">
     </div>
-<header> 
-    <darkButton onclick=""> dark theme </darkButton>
+<header class="headerDark"> 
+    <darkButton class="darkButton" onclick=""> dark theme </darkButton>
     CONTACT
-    <lightButton onclick=""> light theme </lightButton>
+    <lightButton class="lightButton" onclick=""> light theme </lightButton>
 </header>
 <br>    
 <br>
 <div class="containerUp">  
-        <button1 onclick = "window.location.href ='./imgGallery.html'"> image gallery </button1>  
-        <button2 onclick = "window.location.href ='./contact.html'"> contact </button2>
-        <frontpageButton onclick = "window.location.href ='./index.html'"> Frontpage </frontpageButton>
-</div>  
+    <button1 class = "buttonDark" onclick = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
+    <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
+    <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
+</div> 
 <br>
 <br>
 <br>
-<article>
+<article class="article">
     <p><a href="https://github.com/LauriTuovinen"> github </a></p>
     <p><a href="https://www.linkedin.com/in/lauri-tuovinen-81229a257/"> linkedin </a></p>
     <p><a> gmail: lare.tuovinen@gmail.com </a></p>
     <p><a href="https://www.instagram.com/lauri_tuovinen_/"> instagram </a></p>
-    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> onlyfans </a></p>
 </article>
 </body>
 </html>
