--- a/skills.html
+++ b/skills.html
@@ -2,17 +2,18 @@
 <html>
     <meta charset = "UTF-8">
     <title>Lauri Tuovinen</title>
-    <link href="styles.css" rel="stylesheet">    
-
-<body class = "bodyDark">
-<div class = "containerLeft"></div>
-<div class = "containerRight"></div>
-<header class="headerDark">  
+    <link href="styles.css" rel="stylesheet">      
+<body class="bodyDark">
+    <div class = "containerLeft">
+    </div>
+    <div class = "containerRight">
+    </div>
+<header class="headerDark"> 
     <darkButton class="darkButton" onclick=""> dark theme </darkButton>
-    Welcome
-    <lightButton class = "lightButton" onclick=""> light theme </lightButton>
+    SKILLS
+    <lightButton class="lightButton"> light theme </lightButton>
 </header>
-<br>
+<br>    
 <br>
 <div class="containerUp">  
     <button1 class = "buttonDark" onclick = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
@@ -20,11 +21,8 @@
     <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
 </div>
 <br>
-<h1 class ="h1"> Who am I? </h1>
-<article class ="article">
-    <h1 class = "h1">pieni esittely lienee hyväksi</h1>
-        <p>lorem ipsum</p>
+<article class="article">
+    
 </article>
-<script src = "assets/scripts/code.js"></script>
 </body>
 </html>
