--- a/imgGallery.html
+++ b/imgGallery.html
@@ -3,24 +3,27 @@
     <meta charset = "UTF-8">
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">      
-<body>
+<body class = "bodyDark">
    
     <div class = "containerLeft">
     </div>
     <div class = "containerRight">
     </div>
-    <header>     
-        <darkButton onclick=""> dark theme </darkButton>
+    <header class="headerDark">     
+        <darkButton class="darkButton" onclick=""> dark theme </darkButton>
         IMAGE GALLERY
-        <lightButton onclick=""> light theme </lightButton>
+        <lightButton class="lightButton" onclick=""> light theme </lightButton>
 
     </header>
     <br>
     <br>
-  <div class="containerUp">  
-        <button1 onclick = "window.location.href ='./imgGallery.html'"> image gallery </button1>  
-        <button2 onclick = "window.location.href ='./contact.html'"> contact </button2>
-        <frontpageButton onclick = "window.location.href ='./index.html'"> Frontpage </frontpageButton>
-    </div> 
+    <div class="containerUp">  
+        <button1 class = "buttonDark" onclick = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
+        <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
+        <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
+    </div>
+
+    <image class="image">
+    </image>
 </body>
 </html>
