changed nav bar

--- a/contact.html
+++ b/contact.html
@@ -16,18 +16,21 @@
 <br>    
 <br>
 <div class="containerUp">  
-    <button1 class = "buttonDark" onclick = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
-    <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
+    <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
+    <button1 class = "buttonDark" onclick  = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
     <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
-</div> 
+    <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
+</div>
 <br>
 <br>
 <br>
 <article class="article">
-    <p><a href="https://github.com/LauriTuovinen"> github </a></p>
-    <p><a href="https://www.linkedin.com/in/lauri-tuovinen-81229a257/"> linkedin </a></p>
+    <p><a href="https://github.com/LauriTuovinen"> <img src="assets/GitHub-logo.png" height="60px"> </a></p>
+    <p><a href="https://www.linkedin.com/in/lauri-tuovinen-81229a257/"> <img src="assets/LinkedIn.png" height="50px"></a></p>
+    
+    <p class="image"><a href="https://www.instagram.com/lauri_tuovinen_/"><img src="assets/instagram.png" height="50px"> </a></p>
     <p><a> gmail: lare.tuovinen@gmail.com </a></p>
-    <p><a href="https://www.instagram.com/lauri_tuovinen_/"> instagram </a></p>
+
 </article>
 </body>
 </html>
