--- a/imgGallery.html
+++ b/imgGallery.html
@@ -18,11 +18,11 @@
     <br>
     <br>
     <div class="containerUp">  
-        <button1 class = "buttonDark" onclick = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
-        <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
+        <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
+        <button1 class = "buttonDark" onclick  = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
         <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
+        <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
     </div>
-
     <image class="image">
     </image>
 </body>
