--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <br>
 <br>
 <div class="containerUp">  
-    <button1 class = "buttonDark" onclick = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
-    <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
+    <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
+    <button1 class = "buttonDark" onclick  = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
     <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
+    <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
 </div>
 <br>
 <h1 class ="h1"> Who am I? </h1>
