--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">    
 
-<body class = "bodyDark">
+<body class = "bodyDark" alt="bodyLight">
 <div class = "containerLeft"></div>
 <div class = "containerRight"></div>
 <header class="headerDark">  
@@ -21,9 +21,10 @@
     <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
 </div>
 <br>
-<h1 class ="h1"> Who am I? </h1>
+<br>
+<br>
 <article class ="article">
-    <h1 class = "h1">pieni esittely lienee hyväksi</h1>
+    <h1 class = "h1">Who am I?</h1>
         <p>lorem ipsum</p>
 </article>
 <script src = "assets/scripts/code.js"></script>
