splörf en ees tiiä

--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,7 @@
     Feel free to contact me from the links below.
     <p><a href="https://github.com/LauriTuovinen"> <img src="assets/GitHub-logo.png" height="60px"> </a></p>
     <p><a href="https://www.linkedin.com/in/lauri-tuovinen-81229a257/"> <img src="assets/LinkedIn.png" height="50px"></a></p>
-    
-    <p class="image"><a href="https://www.instagram.com/lauri_tuovinen_/"><img src="assets/instagram.png" height="50px"> </a></p>
+    <p><a href="https://www.instagram.com/lauri_tuovinen_/"><img src="assets/instagram.png" height="50px"> </a></p>
     <p><a> gmail: lare.tuovinen@gmail.com </a></p>
 
 </article>
