--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <div class = "containerLeft"></div>
 <div class = "containerRight"></div>
 <header class="headerDark">  
-    <darkButton class="darkButton" onclick=""> dark theme </darkButton>
+    <darkButton class="darkButton" onclick="toDark()"> dark theme </darkButton>
     Welcome
-    <lightButton class = "lightButton" onclick=""> light theme </lightButton>
+    <lightButton class = "lightButton" onclick="toLight()"> light theme </lightButton>
 </header>
 <br>
 <br>
