--- a/imgGallery.html
+++ b/imgGallery.html
@@ -23,7 +23,7 @@
         <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
         <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
     </div>
-    <image class="image">
-    </image>
+    <br>
+    <article class="image" href = "assets/instagram.png"> </article>
 </body>
 </html>
