changed dark ui and added images

--- a/skills.html
+++ b/skills.html
@@ -9,12 +9,9 @@
     <div class = "containerRight">
     </div>
 <header class="headerDark"> 
-    <darkButton class="darkButton" onclick=""> dark theme </darkButton>
     SKILLS
     <lightButton class="lightButton"> light theme </lightButton>
 </header>
-<br>    
-<br>
 <div class="containerUp">  
     <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
     <button1 class = "buttonDark" onclick  = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
@@ -25,7 +22,7 @@
 <br>
 <br>
 <article class="article">
-    
+    lol mitä
 </article>
 </body>
 </html>
