--- a/imgGallery.html
+++ b/imgGallery.html
@@ -4,19 +4,14 @@
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">      
 <body class = "bodyDark">
-   
-    <div class = "containerLeft">
-    </div>
-    <div class = "containerRight">
-    </div>
+    <div class = "containerGalleryL"></div>
+    <div class = "containerGalleryR"></div>
+
     <header class="headerDark">     
-        <darkButton class="darkButton" onclick=""> dark theme </darkButton>
         IMAGE GALLERY
         <lightButton class="lightButton" onclick=""> light theme </lightButton>
 
     </header>
-    <br>
-    <br>
     <div class="containerUp">  
         <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
         <button1 class = "buttonDark" onclick  = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
@@ -24,6 +19,15 @@
         <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
     </div>
     <br>
-    <article class="image" href = "assets/instagram.png"> </article>
+    <article class="article">Photo gallery of designs made with LEGO digital designer.</article>
+    <img class="imageFrameLeft" src="assets/centaur.jpg" alt="boat">
+    <img class="imageFrameRight" src="assets/samurai.jpg" alt="samurai">
+    <img class="imageFrameLeft" src="assets/dragon.jpg" alt="boat">
+    <img class="imageFrameRight" src="assets/flyingship.jpg" alt="samurai">
+    <img class="imageFrameLeft" src="assets/miniwalker.jpg" alt="boat">
+    <img class="imageFrameRight" src="assets/car.jpg" alt="samurai">
+    <img class="imageFrameLeft" src="assets/walker.jpg" alt="boat">
+    <img class="imageFrameRight" src="assets/jet.jpg" alt="samurai">
+    
 </body>
 </html>
