--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
 
 <body class = "bodyDark" alt="bodyLight">
 <div class = "containerLeft"></div>
-<div class = "containerRight"></div>
+<div class = "containerRight"><lightButton class = "lightButton" onclick="toLight()"> light theme </lightButton></div>
 <header class="headerDark">  
-    <darkButton class="darkButton" onclick="toDark()"> dark theme </darkButton>
     Welcome
-    <lightButton class = "lightButton" onclick="toLight()"> light theme </lightButton>
+    
 </header>
-<br>
-<br>
 <div class="containerUp">  
     <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
     <button1 class = "buttonDark" onclick  = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
