splörf e nees tiiä
ei toimi mikkään

--- a/imgGallery.html
+++ b/imgGallery.html
@@ -27,6 +27,6 @@
     <img class="imageFrameLeft" src="assets/dragon.jpg" alt="boat">
     <img class="imageFrameLeft" src="assets/miniwalker.jpg" alt="boat">
     <img class="imageFrameLeft" src="assets/walker.jpg" alt="boat">
-    
+    <script src = "assets/scripts/code.js"></script>
 </body>
 </html>
