--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
 <body class = "bodyDark" alt="bodyLight">
 <div class = "containerLeft"></div>
-<div class = "containerRight"><lightButton class = "lightButton" onclick="toLight()"> light theme </lightButton></div>
+<div class = "containerRight">
+    <lightButton class = "lightButton" onclick="setTimeout(toLight, 1000)"> light theme </lightButton>
+</div>
 <header class="headerDark">  
     Welcome
 </header>
