--- a/skills.html
+++ b/skills.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
     <meta charset = "UTF-8">
     <title>Lauri Tuovinen</title>
-    <link href="styles.css" rel="stylesheet">      
+    <link href="styles.css" rel="stylesheet">
+</head>      
+
 <body class="bodyDark">
     <div class = "containerLeft">
     </div>
@@ -24,5 +27,20 @@
 <article class="article">
     lol mitä
 </article>
+<br>
+<a onclick="addEventListener()" href="#" class="likeBtn">
+    <svg class="likeIcon" fill="#000000" 
+        height="50px" 
+        width="50px" 
+        viewBox="0 0 230 230">
+        <g stroke-width="0"></g>
+        <g stroke-linecap="round" 
+        stroke-linejoin="round"></g>
+        <path d="M213.588,120.982L115,213.445l-98.588-92.463C-6.537,96.466-5.26,57.99,19.248,35.047l2.227-2.083 c24.51-22.942,62.984-21.674,85.934,2.842L115,43.709l7.592-7.903c22.949-24.516,61.424-25.784,85.936-2.842l2.227,2.083 C235.26,57.99,236.537,96.466,213.588,120.982z"></path> </g></svg>
+</a>
+
+<button type="button" onclick="loadDoc()">Change Content</button>
+
+<script src = "assets/scripts/code.js"></script>
 </body>
 </html>
