--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,11 @@
 <br>
 <article class="article">
     Feel free to contact me from the links below.
-    <p><a href="https://github.com/LauriTuovinen"> <img src="assets/GitHub-logo.png" height="60px"> </a></p>
-    <p><a href="https://www.linkedin.com/in/lauri-tuovinen-81229a257/"> <img src="assets/LinkedIn.png" height="50px"></a></p>
-    <p><a href="https://www.instagram.com/lauri_tuovinen_/"><img src="assets/instagram.png" height="50px"> </a></p>
+    <p onclick="redirect()"><a href="https://github.com/LauriTuovinen"><img src="assets/GitHub-logo.png" height="60px"> </a></p>
+    <p onclick="redirect()"><a href="https://www.linkedin.com/in/lauri-tuovinen-81229a257/"> <img src="assets/LinkedIn.png" height="50px"></a></p>
+    <p onclick="redirect()"><a href="https://www.instagram.com/lauri_tuovinen_/"><img src="assets/instagram.png" height="50px"> </a></p>
     <p><a> gmail: lare.tuovinen@gmail.com </a></p>
-
 </article>
+<script src = "assets/scripts/code.js"></script>
 </body>
 </html>
