--- a/imgGallery.html
+++ b/imgGallery.html
@@ -19,14 +19,30 @@
     <br>
     <br>
     <article class="article">Photo gallery of designs made with LEGO digital designer.</article>
-    <img class="imageFrameRight" src="assets/samurai.jpg" alt="samurai">
-    <img class="imageFrameRight" src="assets/flyingship.jpg" alt="samurai">
-    <img class="imageFrameRight" src="assets/jet.jpg" alt="samurai">    
-    <img class="imageFrameRight" src="assets/car.jpg" alt="samurai">
-    <img class="imageFrameLeft" src="assets/centaur.jpg" alt="boat">    
-    <img class="imageFrameLeft" src="assets/dragon.jpg" alt="boat">
-    <img class="imageFrameLeft" src="assets/miniwalker.jpg" alt="boat">
-    <img class="imageFrameLeft" src="assets/walker.jpg" alt="boat">
+    <img class="imageFrameRight" onclick="loadDoc()" src="assets/samurai.jpg" alt="samurai">
+        <article class="article" id="demo"></article>
+
+    <img class="imageFrameRight" onclick="loadDoc()" src="assets/flyingship.jpg" alt="samurai">
+    <article class="article" id="demo"></article>
+
+    <img class="imageFrameRight" onclick="loadDoc()" src="assets/jet.jpg" alt="samurai">   
+    <article class="article" id="demo"></article>
+ 
+    <img class="imageFrameRight" onclick="loadDoc()" src="assets/car.jpg" alt="samurai">
+    <article class="article" id="demo"></article>
+
+    <img class="imageFrameLeft" onclick="loadDoc()" src="assets/centaur.jpg" alt="boat">  
+    <article class="article" id="demo"></article>
+  
+    <img class="imageFrameLeft" onclick="loadDoc()" src="assets/dragon.jpg" alt="boat">
+    <article class="article" id="demo"></article>
+
+    <img class="imageFrameLeft" onclick="loadDoc()" src="assets/miniwalker.jpg" alt="boat">
+    <article class="article" id="demo"></article>
+
+    <img class="imageFrameLeft" onclick="loadDoc()" src="assets/walker.jpg" alt="boat">
+    <article class="article" id="demo"></article>
+
     <script src = "assets/scripts/code.js"></script>
 </body>
 </html>
