added text to images

--- a/imgGallery.html
+++ b/imgGallery.html
@@ -19,29 +19,29 @@
     <br>
     <br>
     <article class="article">Photo gallery of designs made with LEGO digital designer.</article>
-    <img class="imageFrameRight" onclick="loadDoc()" src="assets/samurai.jpg" alt="samurai">
-        <article class="article" id="demo"></article>
+    <img class="imageFrameRight" onclick="loadSamurai()" src="assets/samurai.jpg" alt="samurai">
+        <article class="article" id="demoSamurai"></article>
 
-    <img class="imageFrameRight" onclick="loadDoc()" src="assets/flyingship.jpg" alt="samurai">
-    <article class="article" id="demo"></article>
+    <img class="imageFrameRight" onclick="loadFlyingship()" src="assets/flyingship.jpg" alt="">
+        <article class="article" id="demoFlyingship"></article>
 
-    <img class="imageFrameRight" onclick="loadDoc()" src="assets/jet.jpg" alt="samurai">   
-    <article class="article" id="demo"></article>
+    <img class="imageFrameRight" onclick="loadJet()" src="assets/jet.jpg" alt="">   
+        <article class="article" id="demoJet"></article>
  
-    <img class="imageFrameRight" onclick="loadDoc()" src="assets/car.jpg" alt="samurai">
-    <article class="article" id="demo"></article>
+    <img class="imageFrameRight" onclick="loadCar()" src="assets/car.jpg" alt="">
+        <article class="article" id="demoCar"></article>
 
-    <img class="imageFrameLeft" onclick="loadDoc()" src="assets/centaur.jpg" alt="boat">  
-    <article class="article" id="demo"></article>
+    <img class="imageFrameLeft" onclick="loadCentaur()" src="assets/centaur.jpg" alt="">  
+        <article class="article" id="demoCentaur"></article>
   
-    <img class="imageFrameLeft" onclick="loadDoc()" src="assets/dragon.jpg" alt="boat">
-    <article class="article" id="demo"></article>
+    <img class="imageFrameLeft" onclick="loadDragon()" src="assets/dragon.jpg" alt="">
+        <article class="article" id="demoDragon"></article>
 
-    <img class="imageFrameLeft" onclick="loadDoc()" src="assets/miniwalker.jpg" alt="boat">
-    <article class="article" id="demo"></article>
+    <img class="imageFrameLeft" onclick="loadMiniwalker()" src="assets/miniwalker.jpg" alt="">
+        <article class="article" id="demoMiniwalker"></article>
 
-    <img class="imageFrameLeft" onclick="loadDoc()" src="assets/walker.jpg" alt="boat">
-    <article class="article" id="demo"></article>
+    <img class="imageFrameLeft" onclick="loadWalker()" src="assets/walker.jpg" alt="">
+        <article class="article" id="demoWalker"></article>
 
     <script src = "assets/scripts/code.js"></script>
 </body>
