added bottom header
yahuu

--- a/imgGallery.html
+++ b/imgGallery.html
@@ -16,9 +16,12 @@
         <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
         <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
     </div>
+    
     <br>
     <br>
-    <article class="article">Photo gallery of designs made with LEGO digital designer.</article>
+    <article class="article">Photo gallery of designs made with LEGO digital designer.
+        <br>Click images to show text.
+    </article>
     <img class="imageFrameRight" onclick="loadSamurai()" src="assets/samurai.jpg" alt="samurai">
         <article class="article" id="demoSamurai"></article>
 
@@ -42,6 +45,8 @@
 
     <img class="imageFrameLeft" onclick="loadWalker()" src="assets/walker.jpg" alt="">
         <article class="article" id="demoWalker"></article>
+    
+        <div class="bottomHeader"></div>
 
     <script src = "assets/scripts/code.js"></script>
 </body>
