--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h1 class = "h1">Who am I?</h1>
         <p>lorem ipsum</p>
 </article>
+<div class="bottomHeader"></div>
 <script src = "assets/scripts/code.js"></script>
 </body>
 </html>
