--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,8 @@
     <p onclick="redirect()"><a href="https://www.instagram.com/lauri_tuovinen_/"><img src="assets/instagram.png" height="50px"> </a></p>
     <p><a> gmail: lare.tuovinen@gmail.com </a></p>
 </article>
+<div class="bottomHeader"></div>
+
 <script src = "assets/scripts/code.js"></script>
 </body>
 </html>
