added to top button

--- a/imgGallery.html
+++ b/imgGallery.html
@@ -2,13 +2,12 @@
 <html>
     <meta charset = "UTF-8">
     <title>Lauri Tuovinen</title>
-    <link href="styles.css" rel="stylesheet">      
+    <link href="styles.css" rel="stylesheet">
 <body class = "bodyDark">
     <div class = "containerGalleryL"></div>
     <div class = "containerGalleryR"></div>
     <header class="headerDark">     
         IMAGE GALLERY
-        <lightButton class="lightButton" onclick=""> light theme </lightButton>
     </header>
     <div class="containerUp">  
         <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
@@ -45,7 +44,8 @@
 
     <img class="imageFrameLeft" onclick="loadWalker()" src="assets/walker.jpg" alt="">
         <article class="article" id="demoWalker"></article>
-    
+        
+        <div class="toTopButton" onclick="toTop()">To top</div> 
         <div class="bottomHeader"></div>
 
     <script src = "assets/scripts/code.js"></script>
