--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
     <meta charset = "UTF-8">
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">    
@@ -21,7 +21,7 @@
 <br>
 <br>
 <br>
-<article class ="article">
+<article class ="articleLeft">
     <h1 class = "h1">Who am I?</h1>
         <p>lorem ipsum</p>
 </article>
