--- a/skills.html
+++ b/skills.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<head>
     <meta charset = "UTF-8">
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">
 </head>      
-
 <body class="bodyDark">
     <div class = "containerLeft">
     </div>
@@ -13,7 +12,6 @@
     </div>
 <header class="headerDark"> 
     SKILLS
-    <lightButton class="lightButton"> light theme </lightButton>
 </header>
 <div class="containerUp">  
     <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
@@ -24,22 +22,12 @@
 <br>
 <br>
 <br>
-<article class="article">
-    lol mitä
+<article class="articleLeft">
+    lol mitä aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>
+    asdasdasdasdasdasdasdddddddddddddddddddddddddddddddddddddddddd
 </article>
 <br>
-<a onclick="addEventListener()" href="#" class="likeBtn">
-    <svg class="likeIcon" fill="#000000" 
-        height="50px" 
-        width="50px" 
-        viewBox="0 0 230 230">
-        <g stroke-width="0"></g>
-        <g stroke-linecap="round" 
-        stroke-linejoin="round"></g>
-        <path d="M213.588,120.982L115,213.445l-98.588-92.463C-6.537,96.466-5.26,57.99,19.248,35.047l2.227-2.083 c24.51-22.942,62.984-21.674,85.934,2.842L115,43.709l7.592-7.903c22.949-24.516,61.424-25.784,85.936-2.842l2.227,2.083 C235.26,57.99,236.537,96.466,213.588,120.982z"></path> </g></svg>
-</a>
 <div class="bottomHeader"></div>
-
 <script src = "assets/scripts/code.js"></script>
 </body>
 </html>
