--- a/imgGallery.html
+++ b/imgGallery.html
@@ -45,7 +45,7 @@
     <img class="imageFrameLeft" onclick="loadWalker()" src="assets/walker.jpg" alt="">
         <article class="article" id="demoWalker"></article>
         
-        <div class="toTopButton" onclick="toTop()">To top</div> 
+        <div class="center"><div class="toTopButton" onclick="toTop()">To top</div> </div>
         <div class="bottomHeader"></div>
 
     <script src = "assets/scripts/code.js"></script>
