--- a/skills.html
+++ b/skills.html
@@ -24,9 +24,33 @@
 <br>
 <article class="articleLeft">
     lol mitä aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>
-    asdasdasdasdasdasdasdddddddddddddddddddddddddddddddddddddddddd
+    asdasdasdasdasdasdasdddddddddddddddddddddddddddddddddddddddddd <br>
+    sissussässössys vittuuutututututututu <br>
+    diibadaapadiipadaapa lkajsdkljasdajhodhjawoidjaodjal a <br>
+    aljshdkashdkajhsdkjhaasoidklasndfolfoiwsjefp9 <br>
+    ei jumalsite, vitun spagettiauto <br>
+    Tämä voisi olla metsä SKSÖkäÄKSäökasärkå <br>
+    vitustako minä tiijjän <br>
+    fgfgfhghfhhhghhghhfghfhfhhfhhhhghhgh <br>
+    
 </article>
-<br>
+<table class="table">
+    <tr>
+      <th>workplace</th>
+      <th>What I did</th>
+    </tr>
+    <tr>
+      <td><a class="a" onclick="redirect()" href="https://hanza.com/manufacturing-clusters/cluster-finland/hanza-mechanics-iisalmi/">Hanza Toolfac</a></td>
+      <td>lorem ipsum</td>
+    </tr>
+    <tr>
+      <td><a class="a" onclick="redirect()" href="https://www.metalpower.fi/">Metalpower</a></td>
+      <td>ilurm lopsum <br> asdasdasdasd <br> liksajdflksjdflkj
+        
+        </td>
+    </tr>
+  </table>
+
 <div class="bottomHeader"></div>
 <script src = "assets/scripts/code.js"></script>
 </body>
