--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 <body class = "bodyDark" alt="bodyLight">
 <div class = "containerLeft"></div>
 <div class = "containerRight">
-    <lightButton class = "lightButton" onclick="setTimeout(toLight, 1000)"> light theme </lightButton>
 </div>
 <header class="headerDark">  
     Welcome
 </header>
-<div class="containerUp">  
+<div class="containerUp">
     <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
     <button1 class = "buttonDark" onclick  = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
     <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
@@ -23,8 +22,9 @@
 <br>
 <article class ="articleLeft">
     <h1 class = "h1">Who am I?</h1>
-        <p>lorem ipsum</p>
+        <p class="blink">lorem ipsum</p>
 </article>
+<div class="blink"> <img class="imageFrame" src="assets/paska.jpg"></img></div>
 <div class="bottomHeader"></div>
 <script src = "assets/scripts/code.js"></script>
 </body>
