added cool animation

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">      
 <body class="bodyDark">
-    <div class = "containerLeft">
+    <div class = "containerLeft"> <a id ="animateL"></a> 
     </div>
-    <div class = "containerRight">
+    <div class = "containerRight"> <a id ="animateR"></a> 
     </div>
 <header class="headerDark"> 
     CONTACT
