--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link href="styles.css" rel="stylesheet">    
 
 <body class = "bodyDark" alt="bodyLight">
-<div class = "containerLeft"></div>
-<div class = "containerRight">
+<div class = "containerLeft"> <a id ="animateL"></a> 
+</div>
+<div class = "containerRight"> <a id ="animateR"></a> 
 </div>
 <header class="headerDark">  
     Welcome
@@ -22,7 +23,7 @@
 <br>
 <article class ="articleLeft">
     <h1 class = "h1">Who am I?</h1>
-        <p class="blink">lorem ipsum</p>
+        <p>lorem ipsum</p>
 </article>
 <div class="blink"> <img class="imageFrame" src="assets/paska.jpg"></img></div>
 <div class="bottomHeader"></div>
