--- a/skills.html
+++ b/skills.html
@@ -6,13 +6,14 @@
     <link href="styles.css" rel="stylesheet">
 </head>      
 <body class="bodyDark">
-    <div class = "containerLeft">
+    <div class = "containerLeft"><a id ="animateL"></a> 
     </div>
-    <div class = "containerRight">
+    <div class = "containerRight"><a id ="animateR"></a> 
     </div>
-<header class="headerDark"> 
+<header class="headerDark">  
+ 
     SKILLS
-</header>
+</header> 
 <div class="containerUp">  
     <button1 class = "buttonDark" onclick = "window.location.href ='./index.html'"> Frontpage </button1>
     <button1 class = "buttonDark" onclick  = "window.location.href ='./imgGallery.html'"> Image gallery </button1>
@@ -41,17 +42,17 @@
     </tr>
     <tr>
       <td><a class="a" onclick="redirect()" href="https://hanza.com/manufacturing-clusters/cluster-finland/hanza-mechanics-iisalmi/">Hanza Toolfac</a></td>
-      <td>lorem ipsum</td>
+      <td>Suraface grinding <br> cylindrical grinding <br> and manual tasks</td>
     </tr>
     <tr>
       <td><a class="a" onclick="redirect()" href="https://www.metalpower.fi/">Metalpower</a></td>
-      <td>ilurm lopsum <br> asdasdasdasd <br> liksajdflksjdflkj
-        
+      <td>Removing sharp edges from metal sheets <br> Drilling threads holes <br> eccentric pressing
         </td>
     </tr>
   </table>
 
 <div class="bottomHeader"></div>
+</div>
 <script src = "assets/scripts/code.js"></script>
 </body>
 </html>
