added animation to imgGallery

--- a/imgGallery.html
+++ b/imgGallery.html
@@ -4,8 +4,8 @@
     <title>Lauri Tuovinen</title>
     <link href="styles.css" rel="stylesheet">
 <body class = "bodyDark">
-    <div class = "containerGalleryL"></div>
-    <div class = "containerGalleryR"></div>
+    <div class = "containerGalleryL"><a id ="animateLGallery"></a></div>
+    <div class = "containerGalleryR"><a id ="animateRGallery"></a></div>
     <header class="headerDark">     
         IMAGE GALLERY
     </header>
