--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
 <br>
 <article class ="articleLeft">
     <h1 class = "h1">Who am I?</h1>
-        <p>lorem ipsum</p>
+        <p> Welcome to my webpage. I'm Lauri. I'm a second year computer science <br>
+            student in oulu university of applied sciences. <br>
+            My hobbies include, playing drums, motorcycling and fixing motorcycles, <br>
+            playing videogames and going to the gym. <br>
+            I'm originally from Siilinjärvi in northern savonia and I moved to Oulu in 2021 when I started studying here. <br>
+            
+        </p>
 </article>
-<div class="blink"> <img class="imageFrame" src="assets/paska.jpg"></img></div>
+<div class="blink"> <img class="imageFrame" src="assets/smileReverse.jpg"></img></div>
 <div class="bottomHeader"></div>
 <script src = "assets/scripts/code.js"></script>
 </body>
