added text and shadows
oisko jo valmis

--- a/skills.html
+++ b/skills.html
@@ -23,17 +23,19 @@
 <br>
 <br>
 <br>
-<article class="articleLeft">
-    lol mitä aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>
-    asdasdasdasdasdasdasdddddddddddddddddddddddddddddddddddddddddd <br>
-    sissussässössys vittuuutututututututu <br>
-    diibadaapadiipadaapa lkajsdkljasdajhodhjawoidjaodjal a <br>
-    aljshdkashdkajhsdkjhaasoidklasndfolfoiwsjefp9 <br>
-    ei jumalsite, vitun spagettiauto <br>
-    Tämä voisi olla metsä SKSÖkäÄKSäökasärkå <br>
-    vitustako minä tiijjän <br>
-    fgfgfhghfhhhghhghhfghfhfhhfhhhhghhgh <br>
-    
+<article class="articleLeft"> 
+    <h1 class="h1"> What i can do</h1>
+    <p>
+    As I mentioned before, I am a computer science student, so I have some 
+    experience in coding. I have some experience with electrical devices, 
+    mainly with arduino. <br>
+    I have some experience with C++, plain C and mySQL from my first year of 
+    studies. <br>
+    From my second year of studies I already have some experience with Java, a little bit of javascript and webprogramming, mainly with HTML and CSS.
+    I have a little work experience with CNC programming. Mainly I have 
+    experience with manual machining machines. For example a surfacegrinding
+    machine.
+    </p>
 </article>
 <table class="table">
     <tr>
