oisko final commit
vois olla

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <br>
 <br>
 <br>
-<article class="article">
+<article class="flex-article">
     Feel free to contact me from the links below.
     <p onclick="redirect()"><a href="https://github.com/LauriTuovinen"><img src="assets/GitHub-logo.png" height="60px"> </a></p>
     <p onclick="redirect()"><a href="https://www.linkedin.com/in/lauri-tuovinen-81229a257/"> <img src="assets/LinkedIn.png" height="50px"></a></p>
@@ -28,7 +28,6 @@
     <p><a> gmail: lare.tuovinen@gmail.com </a></p>
 </article>
 <div class="bottomHeader"></div>
-
 <script src = "assets/scripts/code.js"></script>
 </body>
 </html>
