--- a/imgGallery.html
+++ b/imgGallery.html
@@ -15,35 +15,34 @@
         <button1 class = "buttonDark" onclick  = "window.location.href ='./skills.html'"> Skills </button1>
         <button1 class = "buttonDark" onclick  = "window.location.href ='./contact.html'"> Contact </button1>
     </div>
-    
     <br>
     <br>
-    <article class="article">Photo gallery of designs made with LEGO digital designer.
+    <article class="flex-article">Photo gallery of designs made with LEGO digital designer.
         <br>Click images to show text.
     </article>
     <img class="imageFrameRight" onclick="loadSamurai()" src="assets/samurai.jpg" alt="samurai">
-        <article class="article" id="demoSamurai"></article>
+        <article class="flex-article" id="demoSamurai"></article>
 
     <img class="imageFrameRight" onclick="loadFlyingship()" src="assets/flyingship.jpg" alt="">
-        <article class="article" id="demoFlyingship"></article>
+        <article class="flex-article" id="demoFlyingship"></article>
 
     <img class="imageFrameRight" onclick="loadJet()" src="assets/jet.jpg" alt="">   
-        <article class="article" id="demoJet"></article>
+        <article class="flex-article" id="demoJet"></article>
  
     <img class="imageFrameRight" onclick="loadCar()" src="assets/car.jpg" alt="">
-        <article class="article" id="demoCar"></article>
+        <article class="flex-article" id="demoCar"></article>
 
     <img class="imageFrameLeft" onclick="loadCentaur()" src="assets/centaur.jpg" alt="">  
-        <article class="article" id="demoCentaur"></article>
+        <article class="flex-article" id="demoCentaur"></article>
   
     <img class="imageFrameLeft" onclick="loadDragon()" src="assets/dragon.jpg" alt="">
-        <article class="article" id="demoDragon"></article>
+        <article class="flex-article" id="demoDragon"></article>
 
     <img class="imageFrameLeft" onclick="loadMiniwalker()" src="assets/miniwalker.jpg" alt="">
-        <article class="article" id="demoMiniwalker"></article>
+        <article class="flex-article" id="demoMiniwalker"></article>
 
     <img class="imageFrameLeft" onclick="loadWalker()" src="assets/walker.jpg" alt="">
-        <article class="article" id="demoWalker"></article>
+        <article class="flex-article" id="demoWalker"></article>
         
         <div class="center"><div class="toTopButton" onclick="toTop()">To top</div> </div>
         <div class="bottomHeader"></div>
