no ei ollu viimenen committi

--- a/imgGallery.html
+++ b/imgGallery.html
@@ -17,34 +17,36 @@
     </div>
     <br>
     <br>
-    <article class="flex-article">Photo gallery of designs made with LEGO digital designer.
+    <article class="article">Photo gallery of designs made with LEGO digital designer.
         <br>Click images to show text.
     </article>
     <img class="imageFrameRight" onclick="loadSamurai()" src="assets/samurai.jpg" alt="samurai">
-        <article class="flex-article" id="demoSamurai"></article>
+        <article class="article" id="demoSamurai"></article>
 
     <img class="imageFrameRight" onclick="loadFlyingship()" src="assets/flyingship.jpg" alt="">
-        <article class="flex-article" id="demoFlyingship"></article>
+        <article class="article" id="demoFlyingship"></article>
 
     <img class="imageFrameRight" onclick="loadJet()" src="assets/jet.jpg" alt="">   
-        <article class="flex-article" id="demoJet"></article>
+        <article class="article" id="demoJet"></article>
  
     <img class="imageFrameRight" onclick="loadCar()" src="assets/car.jpg" alt="">
-        <article class="flex-article" id="demoCar"></article>
+        <article class="article" id="demoCar"></article>
 
     <img class="imageFrameLeft" onclick="loadCentaur()" src="assets/centaur.jpg" alt="">  
-        <article class="flex-article" id="demoCentaur"></article>
+        <article class="article" id="demoCentaur"></article>
   
     <img class="imageFrameLeft" onclick="loadDragon()" src="assets/dragon.jpg" alt="">
-        <article class="flex-article" id="demoDragon"></article>
+        <article class="article" id="demoDragon"></article>
 
     <img class="imageFrameLeft" onclick="loadMiniwalker()" src="assets/miniwalker.jpg" alt="">
-        <article class="flex-article" id="demoMiniwalker"></article>
+        <article class="article" id="demoMiniwalker"></article>
 
     <img class="imageFrameLeft" onclick="loadWalker()" src="assets/walker.jpg" alt="">
-        <article class="flex-article" id="demoWalker"></article>
+        <article class="article" id="demoWalker"></article>
         
-        <div class="center"><div class="toTopButton" onclick="toTop()">To top</div> </div>
+        <div class="center">
+            <div class="toTopButton" onclick="toTop()">To top</div> 
+        </div>
         <div class="bottomHeader"></div>
 
     <script src = "assets/scripts/code.js"></script>
