--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             I'm originally from Siilinjärvi in northern savonia and I moved to Oulu in 2021 when I started studying here. <br> 
         </p>
 </article>
-<div class="blink"> <img class="imageFrame" src="assets/smileReverse.jpg"></img></div>
+<div class="blink"> <img class="flex-imageFrame" src="assets/smileReverse.jpg"></img></div>
 <div class="bottomHeader"></div>
 <script src = "assets/scripts/code.js"></script>
 </body>
